3-ns/immich/old/oldold/postgresql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgresql-persistent
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgresql-persistent
  template:
    metadata:
      labels:
        app: immich-postgresql-persistent
    spec:
      containers:
      - name: postgres
        image: ghcr.io/immich-app/postgres:16-vectorchord0.3.0-pgvectors0.3.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: immich-postgresql-data-pvc-final
