3-ns/immich/old/oldold/old-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod # Same as velo
spec:
  ingressClassName: public # Same ingress class you use for other sites
  rules:
  - host: immich.publio.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-server
            port:
              number: 2283
  tls:
  - hosts:
    - immich.publio.online
    secretName: immich-tls
